--- a/Cartoons/Cartoons/Main.storyboard
+++ b/Cartoons/Cartoons/Main.storyboard
@@ -21,7 +21,86 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iQM-Ka-e8S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="268" y="353"/>
+            <point key="canvasLocation" x="2168" y="-1531"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="MMH-xm-k97">
+            <objects>
+                <viewController id="OJc-Un-yQa" customClass="DDContainerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4QK-hG-LdX"/>
+                        <viewControllerLayoutGuide type="bottom" id="uei-rd-rBc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ska-23-SPM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SyM-z6-ltU">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                            </containerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="SyM-z6-ltU" secondAttribute="trailing" id="1SK-aw-dPz"/>
+                            <constraint firstItem="SyM-z6-ltU" firstAttribute="leading" secondItem="Ska-23-SPM" secondAttribute="leading" id="JLJ-b0-jHp"/>
+                            <constraint firstItem="uei-rd-rBc" firstAttribute="top" secondItem="SyM-z6-ltU" secondAttribute="bottom" id="Rzh-sA-4CH"/>
+                            <constraint firstItem="SyM-z6-ltU" firstAttribute="top" secondItem="Ska-23-SPM" secondAttribute="top" id="cBC-SV-bxs"/>
+                            <constraint firstAttribute="centerX" secondItem="SyM-z6-ltU" secondAttribute="centerX" id="oXt-xz-KMf"/>
+                            <constraint firstAttribute="centerY" secondItem="SyM-z6-ltU" secondAttribute="centerY" id="wEk-eX-0EL"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" id="k0b-yP-E3W">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Hzb-65-DLh"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TQR-NV-Ump" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1348" y="-1014"/>
+        </scene>
+        <!--Add Character Controller-->
+        <scene sceneID="c9Q-eJ-tHY">
+            <objects>
+                <viewController id="MVO-RX-mcz" customClass="DDAddCharacterController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6OZ-gf-J4v"/>
+                        <viewControllerLayoutGuide type="bottom" id="ea6-Nn-uoc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cK5-Oz-3a8">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zTZ-MM-zc7">
+                                <rect key="frame" x="16" y="56" width="568" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="WSW-4e-ITI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zTZ-MM-zc7" secondAttribute="trailing" constant="16" id="1U3-Z1-FxP"/>
+                            <constraint firstItem="zTZ-MM-zc7" firstAttribute="top" secondItem="6OZ-gf-J4v" secondAttribute="bottom" constant="56" id="O8F-FM-e6M"/>
+                            <constraint firstItem="zTZ-MM-zc7" firstAttribute="leading" secondItem="cK5-Oz-3a8" secondAttribute="leading" constant="16" id="Ufp-9U-AjK"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" id="zSY-it-RYt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="bsD-Lf-1qB">
+                            <connections>
+                                <action selector="saveItemAction:" destination="MVO-RX-mcz" id="7A6-3w-7tS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="zTZ-MM-zc7" id="Gwr-oY-eOF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oZA-WQ-3kz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1348" y="-261"/>
         </scene>
         <!--Character Collection Controller-->
         <scene sceneID="xKe-d0-dYm">
@@ -73,7 +152,26 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W2H-I5-6MU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1100" y="353"/>
+            <point key="canvasLocation" x="2168" y="-707"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aX3-Qn-9f6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r3N-Np-HcR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DdN-xo-5gQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OJc-Un-yQa" kind="relationship" relationship="rootViewController" id="GSv-u4-pks"/>
+                        <segue destination="MVO-RX-mcz" kind="show" id="Arh-zC-RDz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f6T-v1-hwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="536" y="-1014"/>
         </scene>
     </scenes>
 </document>
