--- a/Cartoons/Cartoons/Cells/DDCharacterTableCell/DDCharacterTableCell.xib
+++ b/Cartoons/Cartoons/Cells/DDCharacterTableCell/DDCharacterTableCell.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="81" id="KGk-i7-Jjw" customClass="DDCharacterTableCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="81" id="KGk-i7-Jjw" customClass="DDCharacterTableCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -39,6 +39,7 @@
                     <constraint firstAttribute="centerY" secondItem="22J-1W-wkH" secondAttribute="centerY" id="zXS-4V-Yur"/>
                 </constraints>
             </tableViewCellContentView>
+            <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="characterImame" destination="22J-1W-wkH" id="xe7-6L-Cuh"/>
                 <outlet property="characterName" destination="pMm-67-2hZ" id="sT6-mN-3hG"/>
