--- a/Cartoons/Cartoons/Main.storyboard
+++ b/Cartoons/Cartoons/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="D6a-ps-qmw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="r3N-Np-HcR">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -7,7 +7,7 @@
         <!--Character Table Controller-->
         <scene sceneID="Y8M-dh-Ofw">
             <objects>
-                <tableViewController id="5eY-Pa-NF3" customClass="DDCharacterTableController" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="DDCharacterTableController" id="5eY-Pa-NF3" customClass="DDCharacterTableController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" id="izm-kp-qZd">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,12 +21,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iQM-Ka-e8S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2168" y="-1531"/>
+            <point key="canvasLocation" x="2832" y="-1359"/>
         </scene>
-        <!--Container View Controller-->
+        <!--Main Controller-->
         <scene sceneID="MMH-xm-k97">
             <objects>
-                <viewController id="OJc-Un-yQa" customClass="DDContainerViewController" sceneMemberID="viewController">
+                <viewController id="OJc-Un-yQa" customClass="DDMainController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4QK-hG-LdX"/>
                         <viewControllerLayoutGuide type="bottom" id="uei-rd-rBc"/>
@@ -35,24 +35,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SyM-z6-ltU">
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kPd-oj-7IW">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <connections>
+                                    <segue destination="cSf-l4-J1g" kind="embed" identifier="EmbedContainer" id="Rdl-0w-QiU"/>
+                                </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="SyM-z6-ltU" secondAttribute="trailing" id="1SK-aw-dPz"/>
-                            <constraint firstItem="SyM-z6-ltU" firstAttribute="leading" secondItem="Ska-23-SPM" secondAttribute="leading" id="JLJ-b0-jHp"/>
-                            <constraint firstItem="uei-rd-rBc" firstAttribute="top" secondItem="SyM-z6-ltU" secondAttribute="bottom" id="Rzh-sA-4CH"/>
-                            <constraint firstItem="SyM-z6-ltU" firstAttribute="top" secondItem="Ska-23-SPM" secondAttribute="top" id="cBC-SV-bxs"/>
-                            <constraint firstAttribute="centerX" secondItem="SyM-z6-ltU" secondAttribute="centerX" id="oXt-xz-KMf"/>
-                            <constraint firstAttribute="centerY" secondItem="SyM-z6-ltU" secondAttribute="centerY" id="wEk-eX-0EL"/>
+                            <constraint firstItem="kPd-oj-7IW" firstAttribute="leading" secondItem="Ska-23-SPM" secondAttribute="leading" id="1xn-lj-TQr"/>
+                            <constraint firstAttribute="trailing" secondItem="kPd-oj-7IW" secondAttribute="trailing" id="SlF-mg-P9S"/>
+                            <constraint firstItem="kPd-oj-7IW" firstAttribute="bottom" secondItem="uei-rd-rBc" secondAttribute="top" id="dld-Rp-EFZ"/>
+                            <constraint firstItem="kPd-oj-7IW" firstAttribute="top" secondItem="4QK-hG-LdX" secondAttribute="bottom" id="whl-pt-7Sc"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" id="k0b-yP-E3W">
-                        <barButtonItem key="leftBarButtonItem" image="CollectionViewIcon" id="60w-lL-5kl"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Hzb-65-DLh"/>
+                        <barButtonItem key="leftBarButtonItem" image="CollectionViewIcon" id="60w-lL-5kl" userLabel="Change">
+                            <connections>
+                                <action selector="changeView:" destination="OJc-Un-yQa" id="vBz-g0-YOD"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Hzb-65-DLh">
+                            <connections>
+                                <segue destination="MVO-RX-mcz" kind="show" id="1Ja-D5-oZt"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQR-NV-Ump" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -78,6 +87,9 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="MVO-RX-mcz" id="CpF-f2-ZEV"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -106,7 +118,7 @@
         <!--Character Collection Controller-->
         <scene sceneID="xKe-d0-dYm">
             <objects>
-                <collectionViewController id="D6a-ps-qmw" customClass="DDCharacterCollectionController" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="DDCharacterCollectionController" id="D6a-ps-qmw" customClass="DDCharacterCollectionController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" dataMode="prototypes" id="lZL-tT-wW2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -122,11 +134,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="109"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e5H-4x-vsI">
-                                            <rect key="frame" x="18" y="23" width="64" height="64"/>
+                                            <rect key="frame" x="18" y="18" width="64" height="64"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="64" id="Qtk-Nr-JA9"/>
                                                 <constraint firstAttribute="width" constant="64" id="e7Q-Nj-klD"/>
@@ -139,7 +151,7 @@
                                     <constraint firstAttribute="centerY" secondItem="e5H-4x-vsI" secondAttribute="centerY" id="bBJ-ix-2W2"/>
                                     <constraint firstAttribute="centerX" secondItem="e5H-4x-vsI" secondAttribute="centerX" id="hfs-nY-0tF"/>
                                 </constraints>
-                                <size key="customSize" width="100" height="109"/>
+                                <size key="customSize" width="100" height="100"/>
                                 <connections>
                                     <outlet property="characterImage" destination="e5H-4x-vsI" id="hNl-Vq-Ps9"/>
                                 </connections>
@@ -153,7 +165,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W2H-I5-6MU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2168" y="-707"/>
+            <point key="canvasLocation" x="2832" y="-611"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="aX3-Qn-9f6">
@@ -167,12 +179,34 @@
                     <nil name="viewControllers"/>
                     <connections>
                         <segue destination="OJc-Un-yQa" kind="relationship" relationship="rootViewController" id="GSv-u4-pks"/>
-                        <segue destination="MVO-RX-mcz" kind="show" id="Arh-zC-RDz"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f6T-v1-hwV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="536" y="-1014"/>
+        </scene>
+        <!--Container View Controller-->
+        <scene sceneID="I9C-fl-owW">
+            <objects>
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="cSf-l4-J1g" customClass="DDContainerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="24f-rl-Kjn"/>
+                        <viewControllerLayoutGuide type="bottom" id="szj-gA-IZa"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="UPu-et-3zN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                    <connections>
+                        <segue destination="5eY-Pa-NF3" kind="custom" identifier="DDCharacterTableController" id="12Q-Lb-hCx"/>
+                        <segue destination="D6a-ps-qmw" kind="custom" identifier="DDCharacterCollectionController" id="Sdq-j3-7Zx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KN6-8p-UKM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2051" y="-1014"/>
         </scene>
     </scenes>
     <resources>
