--- a/Cartoons/Storyboards/Main.storyboard
+++ b/Cartoons/Storyboards/Main.storyboard
@@ -154,6 +154,7 @@
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="centerY" secondItem="e5H-4x-vsI" secondAttribute="centerY" id="bBJ-ix-2W2"/>
                                     <constraint firstAttribute="centerX" secondItem="e5H-4x-vsI" secondAttribute="centerX" id="hfs-nY-0tF"/>
@@ -161,6 +162,7 @@
                                 <size key="customSize" width="100" height="100"/>
                                 <connections>
                                     <outlet property="characterImage" destination="e5H-4x-vsI" id="hNl-Vq-Ps9"/>
+                                    <outletCollection property="gestureRecognizers" destination="qWo-cf-OAr" appends="YES" id="sW7-Wb-cj5"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -169,8 +171,16 @@
                             <outlet property="delegate" destination="D6a-ps-qmw" id="9Qj-rc-NGE"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <outlet property="lpgr" destination="qWo-cf-OAr" id="Xqv-3w-dXy"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W2H-I5-6MU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="qWo-cf-OAr">
+                    <connections>
+                        <outlet property="delegate" destination="D6a-ps-qmw" id="k5k-2M-wWa"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2832" y="-611"/>
         </scene>
